# circos_mag

./: README.md  pyproject.toml
circos_mag/: __init__.py  __main__.py  circos_plot.py  coverage.py  defaults.py  execute.py  gc.py  karyotype.py  logger.py  main.py  plot_style.py  rrna.py  seq_io.py  seq_tk.py  trna.py
config_files/: circos.conf  coverage.conf  gc.conf  ideogram.conf  rrna.conf  ticks.conf  trna.conf
example/: GCA_016214285.1.gff  plot_style.toml
